# RustTestProject

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  default.profraw  dev.env  docker-compose.yml  dockertest  results.xml  users.db
.github/workflows/: rust.yml
kuber/: mongo_cfg.yaml  myapp_cfg.yaml  postgres_cfg.yaml  pvc.yaml  start.sh
migrations/2022-02-23-064125_setup_bd/: up.sql
migrations/2022-02-23-064425_create_posts/: up.sql
migrations/2022-03-02-072854_create_history/: down.sql  up.sql
src/: lib.rs  loginmanager.rs  main.rs  models.rs  mongodbprovider.rs  my_tests.rs  mydatastruct.rs  routes.rs  schema.rs  server.rs  testlogin.rs  testmongo.rs  testsmongo.rs
tools/: coverage.sh  nightlytests.sh
