[package]
name = "RustTestProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
warp = "0.3.2"
mongodb = "2.1.0"
serde = "1.0.136"
serde_json = "1.0.78"
tokio = "1.16.1"
testcontainers = "0.12.0"
async-trait = "0.1.52"
anyhow = "1.0.53"
postgres = "0.19.2"
tracing = "0.1.31"