[package]
name = "rust_test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
warp = "0.3.2"
mongodb = "2.1.0"
serde = "1.0.136"
serde_json = "1.0.78"
tokio = "1.16.1"
testcontainers = "0.12.0"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
async-trait = "0.1.52"
anyhow = "1.0.53"
tracing = "0.1.31"
diesel = { version = "1.4.8", features =["sqlite","r2d2","chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
uuid = "0.8.2"
chrono = {version="0.4.19",features = ["serde"]}